<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:background="#EBFCFB">
    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="739dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:background="@drawable/topinfoback"
            android:padding="10dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="53dp"
                android:layout_height="50dp"
                android:background="@drawable/baseline_arrow_back_24_or" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="About Us"
                android:textSize="30sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="315dp"
            android:layout_height="199dp"
            android:layout_marginStart="50dp"
            app:srcCompat="@drawable/lmloop" />

        <TextView
            android:id="@+id/textView9"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/crop_store"
            android:textSize="17sp"
            android:textColor="#38E54D"/>
        <TextView
            android:id="@+id/textView10"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/about_sec"
            android:textSize="18sp"
            android:textColor="#38E54D"/>
        <TextView
            android:id="@+id/textView11"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/this_crop"
            android:textSize="18sp"
            android:textColor="#38E54D"/>
        <TextView
            android:id="@+id/textView12"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/students"
            android:textSize="18sp"
            android:textColor="#38E54D"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>